employee profile complete

--- a/src/components/Dashboard/Home/userDashboard.css
+++ b/src/components/Dashboard/Home/userDashboard.css
@@ -8,6 +8,9 @@
 .box-shadow {
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
+.box-shadow1 {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 .right {
   float: right;
 }
@@ -28,4 +31,12 @@
 .fa-copy {
   font-size: 28px;
   color: blue;
+}
+.fa-clock-o {
+  font-size: 28px;
+  color: red;
+}
+.clock-warning {
+  font-size: 28px;
+  color: #e4a11b;
 }
